# Bot_discord_loup_garou

./: README.md  bot.py  botv2.py  dockerfile  game_lg.py  hellper.py  main.py  pyproject.toml  responses.py
.github/workflows/: python-app.yml
cartes/: Ancien.jpg:Zone.Identifier  BoucEmissaire.jpg:Zone.Identifier  Chasseur.jpg:Zone.Identifier  Corbeau.jpg:Zone.Identifier  Cupidon.jpg:Zone.Identifier  Loup-Garou.jpg:Zone.Identifier  Maire.jpg:Zone.Identifier  PetiteFille.jpg:Zone.Identifier  Pirate.jpg:Zone.Identifier  Salvateur.jpg:Zone.Identifier  Sorcière.jpg:Zone.Identifier  Villageois.jpg:Zone.Identifier  Voleur.jpg:Zone.Identifier  Voyante.jpg:Zone.Identifier
